fix: improve UX of <ndb-tabs> on mobile.
Increase height of listed items to ~48px.

--- a/src/app/components/ndb-tabs/ndb-tabs.component.scss
+++ b/src/app/components/ndb-tabs/ndb-tabs.component.scss
@@ -66,6 +66,15 @@ a {
     color: transparent!important;
 
     border-radius: 4px;
+  }
 
+  @media (max-width: 1025px) {
+    padding-top: 14px;
+    padding-bottom: 14px;
+
+    &.skt {
+      margin-top: 14px;
+      margin-bottom: 14px;
+    }
   }
 }
